# edb

./: .gitattributes  .gitignore  ARCH.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  Cargo.toml  DEV.md  DEV_PLAN_TO_CLAUDE.md  NOTICE  README.md  TODO.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/src/analysis/: DESIGN.md  instrument.rs  mod.rs  variable.rs
crates/backend/src/artifact/: debug.rs  mod.rs
crates/backend/src/ast/: visitor.rs
crates/backend/src/core/: mod.rs
crates/backend/src/debugger/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  context.rs  env.rs  execution_frame.rs  expression.rs  forking.rs  lib.rs  logging.rs  macros.rs  opcode.rs  progress.rs  provider_db.rs  sol_value.rs  spec_id.rs  test_utils.rs
crates/common/src/types/: abi.rs  breakpoint.rs  code.rs  dyn_sol.rs  execution_frame.rs  mod.rs  snapshot.rs  sol_value.rs  trace.rs
crates/common/tests/: forking_tests.rs
crates/edb/: Cargo.toml
crates/edb/src/: main.rs  proxy.rs  utils.rs  ws_protocol.rs
crates/edb/src/cmd/: debug.rs  mod.rs  proxy_status.rs  replay.rs  server.rs
crates/edb/tests/: cli_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: compiler.rs  context.rs  core.rs  lib.rs  snapshot.rs  source.rs  tweak.rs
crates/engine/src/analysis/: analyzer.rs  analyzer2.rs  annotation.rs  ast.rs  body.rs  common.rs  contract.rs  function.rs  hook.rs  mod.rs  scope.rs  source.rs  step.rs  types.rs  variable.rs  variable2.rs  visitor.rs
crates/engine/src/analysis/ast/: hook.rs  mod.rs  source.rs  utils.rs
crates/engine/src/analysis2/: analyzer.rs  contract.rs  function.rs  mod.rs  result.rs  scope.rs  step.rs  traits.rs  types.rs  variable.rs
crates/engine/src/ast/: blk.rs  decl.rs  func.rs  mod.rs  source.rs  stmt.rs  types.rs
crates/engine/src/context/: evm.rs  mod.rs  query.rs
crates/engine/src/eval/: common.rs  evaluator.rs  mod.rs  utils.rs
crates/engine/src/eval/handlers/: debug.rs  edb.rs  mod.rs
crates/engine/src/inspector/: call_tracer.rs  hook_snapshot_inspector.rs  mod.rs  opcode_snapshot_inspector.rs  snapshot_inspector.rs  step_inspector.rs  tweak_inspector.rs  utils.rs
crates/engine/src/instrumentation/: codegen.rs  common.rs  instrument.rs  mod.rs  modification.rs  strategy.rs
crates/engine/src/orchestration/: analysis.rs  artifact.rs  mod.rs  snapshot.rs
crates/engine/src/rpc/: mod.rs  server.rs  types.rs  utils.rs
crates/engine/src/rpc/methods/: artifact.rs  breakpoint.rs  code.rs  expr.rs  mod.rs  navigation.rs  resolve.rs  snapshot.rs  storage.rs  trace.rs
crates/engine/src/snapshot/: analysis.rs  mod.rs  pretty_print.rs
crates/engine/src/utils/: abi.rs  artifact.rs  ast.rs  ast_prune.rs  compilation.rs  disasm.rs  errors.rs  etherscan.rs  mod.rs  onchain_compiler.rs  persistent_data.rs  source.rs  sourcify.rs  visitor.rs
crates/engine/tests/: config_tests.rs  instrumentation_tests.rs  source_tests.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs  rpc_test_utils.rs  test_utils.rs
crates/integration-tests/tests/: engine_e2e_tests.rs  forking_with_proxy_tests.rs
crates/rpc-proxy/: Cargo.toml  DEV.md  README.md  TUI_DEV_PLAN.md
crates/rpc-proxy/examples/: active_instances_demo.md
crates/rpc-proxy/src/: cache.rs  health.rs  lib.rs  main.rs  metrics.rs  providers.rs  proxy.rs  registry.rs  rpc.rs
crates/rpc-proxy/src/tui/: app.rs  mod.rs  remote.rs  widgets.rs
crates/rpc-proxy/tests/: integration_tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  config.rs  layout.rs  lib.rs  rpc.rs
crates/tui/src/data/: mod.rs  theme.rs  utils.rs  watcher.rs
crates/tui/src/data/manager/: core.rs  execution.rs  mod.rs  resolve.rs
crates/tui/src/managers/: breakpoint.rs  data_manager.rs  execution.rs  info.rs  mod.rs  resolve.rs  resource.rs  theme.rs
crates/tui/src/panels/: code.rs  display.rs  help.rs  mod.rs  terminal.rs  trace.rs  utils.rs
crates/tui/src/ui/: borders.rs  colors.rs  icons.rs  mod.rs  spinner.rs  status.rs
crates/tui/src/ui/syntax/: mod.rs  opcodes.rs  solidity.rs
crates/tui/tests/: tui_tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: api_keys.rs  cache.rs  context.rs  etherscan.rs  forking.rs  lib.rs  log.rs  logging.rs  onchain_compiler.rs  spec_id.rs
crates/utils/tests/: forking_tests.rs
crates/webui/: Cargo.toml
crates/webui/src/: lib.rs
crates/webui/tests/: webui_tests.rs
resources/: edb-giveth.txt
scripts/: add_copyright.sh  install.sh
testdata/cache/rpc/mainnet/: rpc.json
testdata/cache/solc/mainnet/: 0x000000000022D473030F116dDEE9F6B43aC78BA3.json  0x0061E516886A0540F63157f112C0588eE0651dCF.json  0x0F6E8eF18FB5bb61D545fEe60f779D8aED60408F.json  0x1820a4B7618BdE71Dce8cdc73aAB6C95905faD24.json  0x1EB4CF3A948E7D72A198fe073cCb8C7a948cD853.json  0x3e8468f66d30Fc99F745481d4B383f89861702C6.json  0x3fC91A3afd70395Cd496C647d5a6CC9D4B2b7FAD.json  0x4d0Edd347FB1fA21589C1E109B3474924BE87636.json  0x524818CB8081941B618613c6F990C17Bb3DA0866.json  0x5cD0aD98bA6288eD7819246A1EBC0386C32C314b.json  0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419.json  0x6292281D69c3593FCF6eA074E5797341476ab428.json  0x6810e776880C02933D47DB1b9fc05908e5386b96.json  0x6FbF8Dc66B1879Ff0Ae243500f8b1E6f6D9E138A.json  0x7Beb8F36650E9327d8C52735e3b3c9D1521576E3.json  0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D.json  0x885f707EFA18D2cb12f05a3a8eBA6B4B26c8c1D4.json  0x9b90E507cF6B7eB681A506b111f6f50245e614c4.json  0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.json  0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  0xE42237F32708BD5C04D69cC77E1E36C8F911A016.json  0xF411903cbC70a74d22900a5DE66A2dda66507255.json  (+7 more)
testdata/rpc_baseline/: large_baseline.json  oog_tweak_baseline.json  simple_baseline.json  uniswap_v3_alt_baseline.json  uniswap_v3_baseline.json  uniswap_v4_baseline.json
typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+37 files in other folders)
