[workspace]
members = ["crates/engine/", "crates/tui/", "crates/webui/", "crates/edb/", "crates/utils/"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.88"
authors = ["The MEDGA Team"]
license = "MIT OR Apache-2.0"
homepage = "https://medga.org/"
repository = "https://github.com/MedGa-eth/EDB"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
missing-docs = "warn"
missing-crate-level-docs = "warn"

[workspace.lints.rustdoc]
all = "warn"
missing-docs = "warn"
missing-crate-level-docs = "warn"
private-doc-tests = "warn"
invalid-html-tags = "warn"
invalid-rust-codeblocks = "warn"
bare-urls = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
debug = true

# Local "release" mode, more optimized than dev but much faster to compile than release.
[profile.local]
inherits = "dev"
opt-level = 1
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "local"
debug = true
strip = "none"
panic = "unwind"

# Optimized release profile.
[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "fat"
strip = "debuginfo"
panic = "abort"
codegen-units = 1

[workspace.dependencies]
# alloy - matching Foundry's versions exactly
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-contract = { version = "1.0.23", default-features = false }
alloy-network = { version = "1.0.23", default-features = false }
alloy-provider = { version = "1.0.23", default-features = false, features = ["reqwest"] }
alloy-rpc-types = { version = "1.0.23", default-features = true }
alloy-signer = { version = "1.0.23", default-features = false }
alloy-transport-http = { version = "1.0.23", default-features = false, features = ["reqwest"] }
alloy-primitives = { version = "1.3.0", features = ["getrandom", "rand"] }
alloy-dyn-abi = "1.3.0"
alloy-json-abi = "1.3.0"
alloy-sol-types = "1.3.0"
alloy-evm = "0.16.0"

# foundry - matching Foundry's versions exactly
foundry-compilers = { version = "0.18.2", default-features = false }
foundry-block-explorers = { version = "0.20.0", default-features = false }

# revm - matching Foundry's version exactly  
revm = { version = "27.1.0", default-features = false, features = ["std", "serde", "optional_eip3607", "optional_block_gas_limit", "optional_no_base_fee", "alloydb"] }

# misc
eyre = "0.6"
lazy_static = "1.5"
paste = "1.0"
hex = "0.4"
tempfile = "3.14"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
