[workspace]
members = [
    "crates/engine/",
    "crates/tui/",
    "crates/edb/",
    "crates/rpc-proxy/",
    "crates/common/",
    "crates/integration-tests/",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.89"
authors = ["Zhuo Zhang", "Wuqi Zhang"]
license = "AGPL-3.0"
homepage = "https://medga.org/"
repository = "https://github.com/edb-rs/EDB"
keywords = ["solidity", "debugging", "debugger", "ethereum", "evm"]
categories = ["development-tools"]
exclude = ["benches/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
missing-docs = "warn"

[workspace.lints.rustdoc]
all = "warn"
missing-crate-level-docs = "warn"
private-doc-tests = "warn"
invalid-html-tags = "warn"
invalid-rust-codeblocks = "warn"
bare-urls = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
debug = true

# Local "release" mode, more optimized than dev but much faster to compile than release.
[profile.local]
inherits = "dev"
opt-level = 1
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "local"
debug = true
strip = "none"
panic = "unwind"

# Optimized release profile.
[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "fat"
strip = "debuginfo"
panic = "abort"
codegen-units = 1

[workspace.dependencies]
# workspace crates
edb-engine = { version = "0.0.2", path = "crates/engine" }
edb-common = { version = "0.0.2", path = "crates/common" }
edb-rpc-proxy = { version = "0.0.2", path = "crates/rpc-proxy" }
edb-integration-tests = { version = "0.0.2", path = "crates/integration-tests" }
edb-tui = { version = "0.0.2", path = "crates/tui" }
edb = { version = "0.0.2", path = "crates/edb" }

# alloy - matching Foundry's versions exactly (updated to 1.0.41)
alloy-chains = "0.2"
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-contract = { version = "1.0.41", default-features = false }
alloy-dyn-abi = { version = "1.4.1", features = ["eip712"] }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-evm = "0.22.3"
alloy-genesis = { version = "1.0.41", default-features = false }
alloy-hardforks = { version = "0.4.0", default-features = false }
alloy-json-abi = "1.4.1"
alloy-json-rpc = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-node-bindings = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
] }
alloy-provider = { version = "1.0.41", default-features = false }
alloy-pubsub = { version = "1.0.41", default-features = false }
alloy-rlp = "0.3"
alloy-rpc-client = { version = "1.0.41", default-features = false }
alloy-rpc-types = { version = "1.0.41", default-features = true }
alloy-rpc-types-anvil = { version = "1.0.41", default-features = false }
alloy-rpc-types-engine = { version = "1.0.41", default-features = false }
alloy-rpc-types-trace = { version = "1.0.41", default-features = false }
alloy-serde = { version = "1.0.41", default-features = false }
alloy-signer = { version = "1.0.41", default-features = false }
alloy-signer-local = { version = "1.0.41", default-features = false }
alloy-sol-types = "1.4.1"
alloy-transport = { version = "1.0.41", default-features = false }
alloy-transport-http = { version = "1.0.41", default-features = false }
alloy-transport-ipc = { version = "1.0.41", default-features = false }
alloy-transport-ws = { version = "1.0.41", default-features = false }
alloy-trie = "0.9"

# foundry - matching Foundry's versions exactly
foundry-block-explorers = { version = "0.22.0", default-features = false }
foundry-compilers = { version = "0.19.5", default-features = false, features = [
    "rustls",
    "svm-solc",
] }

# revm - matching Foundry's version exactly (updated to 30.2.0)
revm = { version = "30.2.0", default-features = false }
revm-inspectors = { version = "0.31.2", features = ["serde"] }
revm-context = { version = "10.1.2", features = ["optional_balance_check"] }
op-revm = "11.1.2"

# solang
solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }

# async
futures = "0.3"
tokio = "1.0"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
toml = "0.9"

# web server
axum = "0.8"
tower = "0.5"
tower-http = "0.6"

# websocket
tokio-tungstenite = "0.28.0"

# rpc client
jsonrpsee = "0.24"

# tui
crossterm = "0.28"
ratatui = "0.29"

# cli
clap = "4"

# misc
auto_impl = "1"
chrono = "0.4"
dashmap = "6"
delegate = "0.13"
derive_more = "2"
dirs = "6"
dirs-next = "2"
dotenv = "0.15"
eyre = "0.6"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1.5"
once_cell = "1"
parking_lot = "0.12"
paste = "1.0"
rand = "0.9"
rayon = "1"
reqwest = { version = "0.12", default-features = false }
rpds = { version = "1", features = ["serde"] }
semver = "1.0.26"
serial_test = "3.0.0"
tempfile = "3.20"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.14.0"

# dev dependencies
assert_cmd = "2.0"
predicates = "3.0"
