[package]
name = "edb-backend"
description = "EDB's backend providing comprehensive debugging functionalities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy.workspace = true

# foundry
foundry-compilers.workspace = true

# misc
eyre.workspace = true
lazy_static.workspace = true
paste.workspace = true
