[package]
name = "edb-common"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Common utilities for EDB"
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-chains.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom", "rand"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-transport-http = { workspace = true, features = ["reqwest"] }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true, features = ["eip712"] }

# foundry
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
foundry-compilers = { workspace = true, features = ["svm-solc"] }

# revm
revm = { workspace = true, features = ["std", "serde", "alloydb", "optional_block_gas_limit", "optional_no_base_fee", "optional_balance_check"] }

# async
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

# serialization
serde = { workspace = true, features = ["derive"] }

# http client
reqwest = { workspace = true, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }

# misc
auto_impl.workspace = true
chrono.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
eyre.workspace = true
indicatif.workspace = true
once_cell.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "ansi",
    "local-time",
] }
tracing-appender = "0.2"
serde_json.workspace = true
serial_test.workspace = true
