[package]
name = "edb"
description = "Ethereum Debugger - A step-by-step debugger for Ethereum transactions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[[bin]]
name = "edb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# workspace crates
edb-common.workspace = true
edb-engine.workspace = true
edb-tui.workspace = true

# alloy - using individual crates like Foundry does
alloy-primitives = { workspace = true, features = ["getrandom", "rand"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }

# foundry
foundry-compilers.workspace = true

# revm
revm = { workspace = true, features = ["std", "serde"] }

# async
tokio = { workspace = true, features = ["full"] }

# websocket
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite.workspace = true

# cli
clap = { workspace = true, features = ["default", "derive", "env"] }

# misc
dotenv.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
