[package]
name = "edb-integration-tests"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

description = "Integration tests for EDB components"

[lints]
workspace = true

[dependencies]
# EDB internal crates
edb-common.workspace = true
edb-rpc-proxy.workspace = true
edb-engine.workspace = true

# Test dependencies
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
chrono.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
reqwest = { workspace = true, features = ["json"] }

# Alloy for blockchain types
alloy-primitives = { workspace = true, features = ["getrandom", "rand"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }

# REVM for hardfork specs
revm = { workspace = true, features = ["std", "serde", "alloydb"] }
