[package]
name = "edb-tui"
description = "Terminal User Interface for EDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# async
tokio = { workspace = true, features = ["full"] }

# tui
crossterm.workspace = true
ratatui.workspace = true

# rpc client
jsonrpsee = { workspace = true, features = ["client", "http-client"] }

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# misc
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
edb-common = { path = "../common" }
