[package]
name = "edb-tui"
description = "Terminal User Interface for EDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[[bin]]
name = "edb-tui"
path = "src/bin/main.rs"

[dependencies]
# cli
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# async
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# tui
crossterm = { workspace = true, features = ["event-stream"] }
ratatui.workspace = true

# rpc client
jsonrpsee = { workspace = true, features = ["client", "http-client"] }
reqwest = { workspace = true, features = ["json"] }

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# misc
eyre.workspace = true
tracing.workspace = true
dirs.workspace = true
regex = "1.11"

# common components
edb-common.workspace = true

# alloy for trace formatting
alloy-primitives = { workspace = true, features = ["getrandom", "rand"] }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }

# revm for trace types
revm = { workspace = true, features = ["std", "serde", "alloydb"] }

[dev-dependencies]
