[package]
name = "edb-utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-evm.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom", "rand"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-transport-http = { workspace = true, features = ["reqwest"] }

# revm
revm = { workspace = true, features = ["std", "serde"] }

# async
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

# serialization
serde = { workspace = true, features = ["derive"] }

# http client
reqwest = { workspace = true, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }

# misc
eyre.workspace = true
indicatif.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
