[package]
name = "edb-webui"
description = "Web User Interface for EDB"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# async
tokio = { workspace = true, features = ["full"] }

# web server
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "fs"] }

# rpc client
jsonrpsee = { workspace = true, features = [
    "client",
    "http-client",
    "ws-client",
] }

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# misc
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
edb-common.workspace = true
